--- a/ex009/index.html
+++ b/ex009/index.html
@@ -30,6 +30,9 @@
 
     <h2>Abreviações</h2>
     <p>I'm studying <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. I'm loving it</p>
-    
+    <abbr title="turu bom">eai belezinha</abbr>
+    <script>
+        <div onmouseover="mouseover()" class="ContPers" ></div>
+    </script>
 </body>
 </html>
